--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,6 @@ footer {
     background-color: rgba(0, 0, 0, 0.342);
     color: white;
     text-align: center;
-    position: absolute;
+    position: relative; ;
     bottom: 0;
 }
