--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -5,7 +5,7 @@ div.container {
     justify-content: space-evenly;
 }
 
-form{
+form#newsForm{
     margin: 3rem;
     border-radius: 30px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
